--- a/Projeto/docker-compose.yml
+++ b/Projeto/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   prometheus:
     image: prom/prometheus:latest
@@ -25,7 +23,6 @@ services:
       - "3000:3000"
     volumes:
       - grafana-data:/var/lib/grafana
-      - ./grafana/provisioning:/etc/grafana/provisioning
       - ./grafana/dashboards:/var/lib/grafana/dashboards
     environment:
       - GF_SECURITY_ADMIN_USER=admin
@@ -45,5 +42,5 @@ volumes:
 
 networks:
   monitoring:
-    driver: bridge
+    external: true
     name: projeto_monitoring
